--- a/Aula6/Exerc/excer.html
+++ b/Aula6/Exerc/excer.html
@@ -1,13 +1,32 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercicio aula6</title>
 </head>
+
 <body>
     <script>
-        const nome = prompt("Digite seu nome:")
+
+        let nome = prompt('Digite seu nome completo (por favor):');
+
+        document.body.innerHTML += `Seu nome é: ${nome}<br />`;
+
+        nome = nome.toLowerCase()
+        let nomJunto = nome.replace(/ /g, "")
+
+        document.body.innerHTML += `Seu nome tem ${(nome.replace(/ /g, "")).length} letras <br />`;
+        document.body.innerHTML += `A segunda letra do seu nome é: ${nome[1]}<br />`;
+        document.body.innerHTML += `Qual o primeiro índice da letra "a" no seu nome? ${nomJunto.indexOf('a')} <br />`;
+        document.body.innerHTML += `Qual o último índice da letra "a" no seu nome? ${nomJunto.lastIndexOf('a')}<br />`;
+        document.body.innerHTML += `As últimas 3 letras do seu nome são: ${nome.slice(-3)}<br />`;
+        document.body.innerHTML += `As palavras do seu nome são: ${nome.split(" ")}<br />`;
+        document.body.innerHTML += `Seu nome com letras maiúsculas: ${nome.toUpperCase()}<br />`;
+        document.body.innerHTML += `Seu nome com letras minúsculas: ${nome}<br />`;
+
     </script>
 </body>
+
 </html>
