--- a/Testes/bing.html
+++ b/Testes/bing.html
@@ -16,11 +16,11 @@
 </head>
 <body style="background-color:bisque;">
     
-<h1 style=>Oi Evinha!!!!</h1>
+<h1 style=>Pov</h1>
 <p style="background-color: rgb(21, 255, 0);color: blue;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aut magni sapiente quae eligendi quis aliquam esse totam nesciunt, quidem quos nisi nam, eum suscipit enim nulla saepe voluptates voluptas eius.</p>
-<p> TE AMO  TE AMO  TE AMO  TE AMO  TE AMO  TE AMO  TE AMO  TE AMO  TE AMO  TE AMO  TE AMO </p>
-<p> TE AMO  TE AMO  TE AMO  TE AMO  TE AMO  TE AMO  TE AMO  TE AMO  TE AMO  TE AMO  TE AMO </p>
-<p> TE AMO  TE AMO  TE AMO  TE AMO  TE AMO  TE AMO  TE AMO  TE AMO  TE AMO  TE AMO  TE AMO </p>
+<p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aut magni sapiente quae eligendi quis aliquam esse totam nesciunt, quidem quos nisi nam, eum suscipit enim nulla saepe voluptates voluptas eius. </p>
+<p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aut magni sapiente quae eligendi quis aliquam esse totam nesciunt, quidem quos nisi nam, eum suscipit enim nulla saepe voluptates voluptas eius. </p>
+<p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aut magni sapiente quae eligendi quis aliquam esse totam nesciunt, quidem quos nisi nam, eum suscipit enim nulla saepe voluptates voluptas eius. </p>
 
 </body>
 </html>
