--- a/Testes/teste2/test2.html
+++ b/Testes/teste2/test2.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grande banana esplanide</title>
-    <link rel="stylesheet" href="test2.css">
+    <link rel="stylesheet" href="test2.css"><!--Na minha opinião, o melhor jeito de dar estilo
+    -->
 </head>
 <body>
     <h1>O nome do site</h1>
