--- a/JS lógica/Aula5/Exercicio/Exercicio-Aula5/index.html
+++ b/JS lógica/Aula5/Exercicio/Exercicio-Aula5/index.html
@@ -8,11 +8,10 @@
 </head>
 <body>
     <section class="container">
-        <h1>Tabela IMC</h1>
-        <table>
+        <h1 align="center">Tabela IMC</h1>
+        <table align="center">
           <tr>
             <th>IMC</th>
-            <br>
             <th>Resultado</th>
           </tr>
           <tr>
@@ -41,21 +40,16 @@
           </tr>
         </table>
 
-      <form action="">
-        <label for="input-teste-1">Label teste #1</label>
-        <input type="text" id="input-teste-1">
+      <form class="form" action="" method="get">
+        <label for="peso">Peso</label>
+        <input type="text" id="peso">
 
-        <label for="input-teste-2">Label teste #2</label>
-        <input type="password" id="input-teste-2">
-
-        <label for="input-teste-3">Label teste #3</label>
-        <input type="email" id="input-teste-3">
-
-        <label for="input-teste-4">Label teste #4</label>
-        <input type="number" id="input-teste-4">
+        <label for="altura">altura(em metros)</label>
+        <input type="text" id="altura">
 
         <button>Enviar</button>
       </form>
+      <div class="resultado"></div>
     </section>
     <script src="./assets/js/main.js"></script>
 </body>
