--- a/JS lógica/Aula5/Exercicio/Exercicio-Aula5/index.html
+++ b/JS lógica/Aula5/Exercicio/Exercicio-Aula5/index.html
@@ -8,43 +8,37 @@
 </head>
 <body>
     <section class="container">
-        <h1 align="center">Tabela IMC</h1>
-        <table align="center">
-          <tr>
-            <th>IMC</th>
-            <th>Resultado</th>
-          </tr>
-          <tr>
-            <td>>18,5</td>
-            <td>Abaixo do peso</td>
-          </tr>
-        <tr>
-            <td>18,5-24,9</td>
-            <td>Peso normal</td>
-          </tr>
-          <tr>
-            <td>25-29,9</td>
-            <td>Sobrepeso</td>
-          </tr>
-          <tr>
-            <td>30-34,9</td>
-            <td>Obesidade grau 1</td>
-          </tr>
-          <tr>
-            <td>35-39,9</td>
-            <td>Obesidade grau2</td>
-          </tr>
-          <tr>
-            <td>40></td>
-            <td>Obesidade grau 3</td>
-          </tr>
-        </table>
+        <h1>Tabela IMC</h1>
+        <div id="imc">
+          <ul>
+            <h2>IMC</h2>
+            <li>Menos do que 18,5</li>
+            <li>Entre 18,5 e 24,9</li>
+            <li>Entre 25 e 24,9</li>
+            <li>Entre 30 e 34,9</li>
+            <li>Entre 35 e 39,9</li>
+            <li>Mais do que 40</li>
+          </ul>
+        </div>
+        <div id="result">
+          <ul>
+            <h2>Resultado</h2>
+            <li>Abaixo do peso</li>
+            <li>Peso normal</li>
+            <li>sobrepeso</li>
+            <li>Obesidade grau 1</li>
+            <li>Obesidade grau 2</li>
+            <li>Obesidade grau 3</li>
+          </ul>
+        </div>
+
+        <h1>Calcule seu IMC</h1>
 
       <form class="form" action="" method="get">
-        <label for="peso">Peso</label>
+        <label for="peso">Peso:</label>
         <input type="text" id="peso">
 
-        <label for="altura">altura(em metros)</label>
+        <label for="altura">altura(em metros):</label>
         <input type="text" id="altura">
 
         <button>Enviar</button>
