--- a/Testes/bing.html
+++ b/Testes/bing.html
@@ -3,21 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LOVE</title>
-    <style>
-        h1{
-            color: aliceblue;
-        }
-        p{
-            background-color: rgb(216, 13, 234);
-            color: rgb(175, 235, 235);
-        }
-    </style>
+    <title>Bababoe</title>
+    <link rel="stylesheet" href="bong.css">
+
 </head>
 <body style="background-color:bisque;">
-    
-<h1 style=>Pov</h1>
-<p style="background-color: rgb(21, 255, 0);color: blue;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aut magni sapiente quae eligendi quis aliquam esse totam nesciunt, quidem quos nisi nam, eum suscipit enim nulla saepe voluptates voluptas eius.</p>
+    <header>
+        <h1 id="title">Pov</h1>
+        
+    </header>
+
+<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aut magni sapiente quae eligendi quis aliquam esse totam nesciunt, quidem quos nisi nam, eum suscipit enim nulla saepe voluptates voluptas eius.</p>
 <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aut magni sapiente quae eligendi quis aliquam esse totam nesciunt, quidem quos nisi nam, eum suscipit enim nulla saepe voluptates voluptas eius. </p>
 <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aut magni sapiente quae eligendi quis aliquam esse totam nesciunt, quidem quos nisi nam, eum suscipit enim nulla saepe voluptates voluptas eius. </p>
 <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aut magni sapiente quae eligendi quis aliquam esse totam nesciunt, quidem quos nisi nam, eum suscipit enim nulla saepe voluptates voluptas eius. </p>
